--- a/front/css/master.css
+++ b/front/css/master.css
@@ -1,7 +1,7 @@
 
 .navbar-inverse {
     background-color: #FFF;
-    border-color: none;
+    border-color: #000;
 }
 .navbar-inverse .navbar-nav>li>a {
     color: #337ab7;
@@ -19,13 +19,24 @@
 	color: #337ab7;
 }
 
+.textbot{
+	padding-left: 10%;
+	padding-right: 10%;
+}
+
 .textbot > h2 {
 	color: #337ab7;
+}
+
+#logo{
+
+	height: 40%;
+	width: 40%;
 }
 
 #bot{
 
 	height: 70%;
 	width: 70%;
-	text-align: center;
+	
 }
